tests/vertical-slice/accept/vec_pop_empty_actor_isolated.hew
actor VecPopCrasher {
    receive fn boom() {
        let xs: Vec<i64> = Vec::new();
        let _ = xs.pop();
    }
}

actor VecPopProbe {
    receive fn ping() -> i64 {
        0
    }
}

fn main() -> i64 {
    let crasher = spawn VecPopCrasher;
    let probe = spawn VecPopProbe;
    crasher.boom();
    sleep(300ms);
    match await probe.ping() {
        Ok(v) => v,
        Err(_) => 1,
    }
}

