tests/vertical-slice/reject/spawned_closure_weak_non_send_capture.hew
fn main() {
    let rc = Rc::new(1);
    let weak = rc.downgrade();
    scope { (move || { let _ = weak; })(); };
}
